--- a/css_kaka/bootstrap.css
+++ b/css_kaka/bootstrap.css
@@ -568,11 +568,11 @@ progress {
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
+  /* background-color: rgb(10, 10, 10);
+  border: 1px solid #000305; */
   border-radius: 0.25rem;
-  max-width: 100%;
-  height: auto;
+  width: 250px%;
+  height: 250px;
 }
 
 .figure {
@@ -3671,18 +3671,18 @@ textarea.form-control-lg {
   text-align: inherit;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
+  background-color: rgb(26, 1, 1);
   border: 0;
 }
 .dropdown-item:hover, .dropdown-item:focus {
-  color: #1e2125;
-  background-color: #e9ecef;
+  color: #f9fbfd;
+  background-color: #011830;
 }
 
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #0d6efd;
+  background-color: #24010a;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -4258,7 +4258,7 @@ textarea.form-control-lg {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
-  color: rgb(245, 245, 245);
+  color: whitesmoke;
 }
 .card > hr {
   margin-right: 0;
