--- a/namba.css
+++ b/namba.css
@@ -1,6 +1,6 @@
 body
 {
-  background: -webkit-linear-gradient(top, rgb(42, 1, 61), rgb(71, 7, 7), rgb(63, 3, 50));
+  background: -webkit-linear-gradient(top, rgb(42, 1, 61), rgb(71, 7, 7), rgb(63, 3, 50), rgb(1, 32, 1));
    opacity: 0.8;
    filter: brightness(opacity=60);
    overflow-x: hidden;
@@ -29,7 +29,7 @@ body
   
   h1 {
     font-size: 30px;
-    background: -webkit-linear-gradient(rgb(221, 91, 5), rgb(202, 100, 4));
+    background: -webkit-linear-gradient(rgba(221, 91, 5, 0.9), rgba(202, 100, 4, 0.9));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
@@ -85,8 +85,8 @@ body
   .boda
   {
     width: 98%;
-    height: 500px;
-    margin: 5px 4px 5px 11px !important;
+    height: 520px;
+    margin: 5px 4px 13px 11px !important;
     word-wrap: break-word;
     background-color: rgb(19, 0, 6);
     background-clip: border-box;
@@ -144,10 +144,189 @@ body
   }
   .p_1
   {
-    padding: 10px 5px 5px  20px;
-    text-align: justify;
+    padding: 0px 5px 5px  0px;
+    text-align: left;
   }
   .form_1
   {
     height: 590px !important;
   }
+
+  #data
+{
+    display: block;
+    width: 94%;
+    border-radius: 10px;
+    height: 500px;
+    background-color: rgb(1, 46, 39);
+    border-color: chartreuse;
+    color: white;
+    float: left;
+    margin: 10px 0px 0px 2px;
+    border-top-width: 60px;
+    border-bottom-width: 60px;
+    position: -webkit-sticky;
+}
+#one
+{
+  position: -webkit-sticky;
+  width: 100%;
+  height: 50px;
+  display: block;
+  background-color: rgb(240, 203, 203);
+  margin-bottom: 10px;
+  color: #212529;
+  text-align: left;
+  text-indent: 20px;
+}
+
+#three
+{
+  position: -webkit-sticky;
+  width: 100%;
+  height: 50px;
+  display: block;
+  margin-top: 20px;
+  background-color: rgb(236, 22, 22);
+}
+
+#two
+{
+    display: block;
+    width: 100%;
+    height: 250px;
+    background-color: #f9fdf5;
+    border-color: chartreuse;
+    color: rgb(12, 4, 4);
+    float: left;
+    margin: -10px 0px 0px 0px;
+    border-radius: 1px;
+    border-top-width: 60px;
+    border-bottom-width: 60px;
+    overflow-y: auto;
+    text-align: justify;
+    text-indent: 20px;
+    word-wrap: break-word; 
+    overflow-clip-margin: 1px;
+    overflow: auto;
+    overflow-wrap: break-word;
+}
+
+#four
+{
+  border-radius: 10%;
+  float: right;
+  display: block;
+  background-color: rgb(219, 241, 241);
+  background-size: cover;
+  width: 200px;
+  height: 170px;
+  margin-top: -160px;
+  margin-right: 22px;
+  margin-bottom: 25px;
+  column-rule: rgb(17, 12, 12);
+  text-indent: 10px;
+  text-align: justify;
+  position: -webkit-sticky;
+}
+
+@media (min-width: 576px) {
+   #one #one #two #data
+   {
+     flex: 0px;
+     position: static;
+   }
+ }
+ @media (min-width: 768px) { 
+  #one #one #two #data
+  {
+    flex: 0px;
+    position: static;
+  }
+  }
+
+  @media (min-width: 992px) { 
+    #one #one #two #data
+    {
+      flex: 0px;
+      position: static;
+    }
+    }
+
+    @media (max-width: 575.98px) { 
+      #one #one #two #data
+      {
+        flex: 0px;
+        position: static;
+      }      
+    }
+
+    @media (max-width: 767.98px) { 
+      #one #one #two #data
+      {
+        flex: 0px;
+        position: static;
+      }  
+    }
+
+    @media (max-width: 991.98px) { 
+      #one #one #two #data
+      {
+        flex: 0px;
+        position: static;
+      }  
+    }
+
+    @media (max-width: 1199.98px) { 
+      #one #one #two #data
+      {
+        flex: 0px;
+        position: static;
+      }  
+    }
+
+    @media (max-width: 430px) { 
+      #one #one #two #data
+      {
+        flex: 0px;
+        position: static;
+      }  
+    }
+#pa
+{
+  float: left;
+  display: block;
+  width: 420px;
+  height: 500px;
+  background-color: rgb(219, 241, 241);
+  margin: 40px 0px 30px 6px;
+  border-radius: 13px;
+
+}
+
+#pb
+{
+  float: right;
+  display: block;
+  width: 420px;
+  height: 500px;
+  background-color: rgb(219, 241, 241);
+  margin: 40px 6px 30px 10px;
+  border-radius: 13px;
+}
+
+#pc
+{
+  float: right;
+  display: block;
+  width: 420px;
+  height: 500px;
+  background-color: rgb(5, 5, 5);
+  margin: 40px 6px 30px 10px;
+  border-radius: 13px;
+}
+#cont
+{
+  text-align: justify;
+  padding-left: 2px;
+}
