--- a/css_kaka/bootstrap.css
+++ b/css_kaka/bootstrap.css
@@ -1937,7 +1937,7 @@ progress {
   margin-bottom: 1rem;
   color: #212529;
   vertical-align: top;
-  border-color: #dee2e6;
+  border-color: #070707;
 }
 .table > :not(caption) > * > * {
   padding: 0.5rem 0.5rem;
