--- a/namba.css
+++ b/namba.css
@@ -1,6 +1,6 @@
 body
 {
-  background: -webkit-linear-gradient(top, rgb(42, 1, 61), rgb(71, 7, 7), rgb(63, 3, 50), rgb(1, 32, 1));
+  background: -webkit-linear-gradient(top, rgb(1, 61, 36), rgb(71, 7, 7), rgb(63, 3, 50), rgb(66, 40, 2));
    opacity: 0.8;
    filter: brightness(opacity=60);
    overflow-x: hidden;
@@ -61,7 +61,7 @@ body
   .card
   {
     width: 98% !important;
-    height: 620px !important;
+    height: 950px !important;
     margin: 10px !important;
     background: linear-gradient(top , blue, yellow) !important;
   }
@@ -85,8 +85,8 @@ body
   .boda
   {
     width: 98%;
-    height: 520px;
-    margin: 5px 4px 13px 11px !important;
+    height: 620px;
+    margin: 5px 4px 1px 11px !important;
     word-wrap: break-word;
     background-color: rgb(19, 0, 6);
     background-clip: border-box;
@@ -158,14 +158,15 @@ body
     width: 94%;
     border-radius: 10px;
     height: 500px;
-    background-color: rgb(1, 46, 39);
+    background-color: rgb(26, 1, 15);
     border-color: chartreuse;
-    color: white;
+    color: rgb(15, 1, 1);
     float: left;
-    margin: 10px 0px 0px 2px;
+    margin: 10px 0px 0px -2px;
     border-top-width: 60px;
     border-bottom-width: 60px;
     position: -webkit-sticky;
+    align-items: center;
 }
 #one
 {
@@ -211,13 +212,124 @@ body
     overflow: auto;
     overflow-wrap: break-word;
 }
+@media (max-width: 575.98px)
+{
+  #two>figure
+  {
+    width: 150px;
+    position: sticky;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+  @media (max-width: 348px)
+  {
+    #two>figure
+    {
+      width: 150px;
+      position: sticky;
+    }
+    .pagination
+    {
+      width: auto;
+      font-size: small;
+    }
+
+  }
+  @media (max-width: 280px)
+  {
+    #two>figure
+    {
+      width: 150px;
+      position: sticky;
+    }
+    .pagination
+    {
+      width: auto;
+      font-size: small;
+    }
+  }
+@media (max-width: 360px)
+{
+  #four>figure
+  {
+    width: 15px;
+    margin-left: -1px;
+    font-size: small;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+  #four>img
+  {
+    width: 10px;
+  }
+}
+@media (max-width: 430px) 
+{
+  #four>figure
+  {
+    width: 15px;
+    margin-left: -1px;
+    font-size: small;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+  #four>img
+  {
+    width: 10px;
+  }
+}
+@media (max-width: 348px)
+{
+  #four>figure
+  {
+    width: 15px;
+    margin-left: -1px;
+    font-size: small;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+  #four>img
+  {
+    width: 10px;
+  }
+}
+@media (max-width: 280px)
+{
+  #four>figure
+  {
+    width: 15px;
+    margin-left: -1px;
+    font-size: small;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+  #four>img
+  {
+    width: 10px;
+  }
+}
 
 #four
 {
   border-radius: 10%;
   float: right;
   display: block;
-  background-color: rgb(219, 241, 241);
+  background-color: cyan;
   background-size: cover;
   width: 200px;
   height: 170px;
@@ -230,67 +342,273 @@ body
   position: -webkit-sticky;
 }
 
+@media (max-width: 575.98px)
+{
+  #four
+  {
+    width: 200px;
+    position: sticky;
+    font-size: small;
+    color: rgba(7, 0, 0, 0.9);
+    font-family: 'Times New Roman', Times, serif;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+}
+@media (max-width: 430px) 
+{
+  #four
+  {
+    width: 200px;
+    position: sticky;
+    font-size: small;
+    color: rgba(7, 0, 0, 0.9);
+    font-family: 'Times New Roman', Times, serif;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+}
+@media (max-width: 280px)
+{
+  #four
+  {
+    width: 200px;
+    position: sticky;
+    font-size: small;
+    color: rgba(7, 0, 0, 0.9);
+    font-family: 'Times New Roman', Times, serif;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+}
+@media (max-width: 430px) 
+{
+  #four
+  {
+    width: 150px;
+    margin-right: 0px;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+}
+}
+@media (max-width: 360px)
+{
+  #four
+  {
+    width: 150px;
+    margin-right: 0px;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+}
+@media (max-width: 348px)
+{
+  #four
+  {
+    width: 150px;
+    margin-right: 0px;
+  }
+  .pagination
+  {
+    width: auto;
+    font-size: small;
+  }
+}
+
 @media (min-width: 576px) {
-   #one #one #two #data
+   #one #one #two #data #pa #pb p figure img figcaption #four .pagination
    {
-     flex: 0px;
-     position: static;
+     flex-shrink: 1px;
+     position: relative;
    }
  }
- @media (min-width: 768px) { 
-  #one #one #two #data
+ @media (min-width: 767.89px) { 
+  #one #one #two #data #pa #pb p figure img figcaption #four .pagination
   {
-    flex: 0px;
-    position: static;
+    flex-shrink: 1px;
+    position: relative;
   }
   }
 
   @media (min-width: 992px) { 
-    #one #one #two #data
+    #one #one #two #data #pa #pb p figure img figcaption #four .pagination
     {
-      flex: 0px;
-      position: static;
+      flex-shrink: 1px;
+      position: relative;
     }
     }
 
     @media (max-width: 575.98px) { 
-      #one #one #two #data
+      #one #one #two #data #pa #pb p figure img figcaption #four .pagination
       {
-        flex: 0px;
-        position: static;
+        flex-shrink: 1px;
+        position: relative;
       }      
     }
 
     @media (max-width: 767.98px) { 
-      #one #one #two #data
+      #one #one #two #data #pa #pb p figure img figcaption #four .pagination
       {
-        flex: 0px;
-        position: static;
+        flex-shrink: 1px;
+        position: relative;
       }  
     }
+    /* @media (max-width: 769px)
+    {
+      #four
+      {
+
+      }
+    } */
 
     @media (max-width: 991.98px) { 
-      #one #one #two #data
+      #one #one #two #data #pa #pb p figure img figcaption #four .pagination
       {
-        flex: 0px;
-        position: static;
+        flex-shrink: 1px;
+        position: relative;
       }  
     }
 
     @media (max-width: 1199.98px) { 
-      #one #one #two #data
+      #one #one #two #data #pa #pb p figure img figcaption #four .pagination
       {
-        flex: 0px;
-        position: static;
+        flex-shrink: 1px;
+        position: relative;
       }  
     }
 
     @media (max-width: 430px) { 
-      #one #one #two #data
+      #one #one #two #data #pa #pb p figure img figcaption #four .pagination
       {
-        flex: 0px;
-        position: static;
+        flex-shrink: 1px;
+        position: relative;
       }  
+    }
+    @media (max-width: 360px) { 
+      #one #one #two #data #pa #pb p figure img figcaption #four .pagination
+      {
+        flex-shrink-s1rink: inherit;
+        position: relative;
+      } 
+      img 
+      {
+        width: 5px;
+        height: 5px;
+      } 
+    }
+    @media (max-width: 321px)
+    {
+      img 
+      {
+        width: 3px;
+        height: 3px;
+      } 
+      #four
+      {
+        width: 138px;
+        margin-right: 0.5px;
+        font-size: small;
+      }
+      figure
+      {
+        font-size: small;
+        margin-left: -13px;
+      }
+      .pagination
+      {
+        width: auto;
+        font-size: small;
+      }
+
+    }
+    @media (max-width: 282px)
+    {
+      img 
+      {
+        width: 1px;
+        height: 1px;
+      } 
+      #four
+      {
+        width: 119px;
+        margin-right: 0.5px;
+        font-size: small;
+      }
+      figure
+      {
+        font-size: small;
+        margin-left: -21px;
+        
+      }
+      .pagination
+      {
+        width: auto;
+        font-size: small;
+      }
+
+    }
+    @media only screen and (max-device-width: 480px) {
+      #four img {
+          width: 400px;
+          position: relative;
+      }
+      .pagination
+      {
+        width: auto;
+        font-size: small;
+      }
+    }
+    @media only screen and (min-device-width: 1023px) {
+      #four{
+          width: 400px;
+          height: 200px;
+          position: relative;
+          float: right;
+          margin: -160px 40px 7px 0px;
+          background-color: cyan;
+          border-radius: 10px;
+
+
+      }
+      .pagination
+      {
+        width: auto;
+        font-size: small;
+      }
+    }
+    @media only screen and (min-device-width: 767px) {
+      #four{
+          width: 400px;
+          height: 200px;
+          position: relative;
+          float: right;
+          margin: -160px 40px 7px 0px;
+          background-color: cyan;
+          border-radius: 10px;
+
+
+      }
+      .pagination
+      {
+        width: auto;
+        font-size: small;
+      }
     }
 #pa
 {
@@ -299,9 +617,22 @@ body
   width: 420px;
   height: 500px;
   background-color: rgb(219, 241, 241);
-  margin: 40px 0px 30px 6px;
+  margin: 20px 0px 30px -3px;
   border-radius: 13px;
 
+}
+@media (max-width: 575.98px) 
+{
+  #pa 
+  {
+      width: 100%;
+      height: 330px;
+      content: normal;
+      padding-bottom: 20px;
+  }
+  #pa>p{
+    display: none;
+  }
 }
 
 #pb
@@ -311,8 +642,18 @@ body
   width: 420px;
   height: 500px;
   background-color: rgb(219, 241, 241);
-  margin: 40px 6px 30px 10px;
+  margin: 20px 3px 30px 0px;
   border-radius: 13px;
+}
+@media (max-width: 575.98px) 
+{
+  #pb
+  {
+      width: 100%;
+      height: 330px;
+      content: normal;
+      padding-bottom: 20px;
+  }
 }
 
 #pc
@@ -329,4 +670,71 @@ body
 {
   text-align: justify;
   padding-left: 2px;
+}
+
+#gar
+{
+  margin: 3px;
+  float: left;
+  width: 180px;
+}
+#gar:hover
+{
+  border: 1px solid #777;
+}
+#gar img
+{
+ width: 100%;
+ height: auto;
+}
+#desc
+{
+  padding: 15px;
+  text-align: center;
+}
+.mfan
+{
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+}
+.kaka
+{
+  float: right !important;
+  margin: 1px 30px 1px 1px !important;
+}
+.opt
+{
+  /* margin: 30px 50px 30px 30%;
+  text-decoration: none;
+  width: 500px; */
+}
+
+.pagination {
+  display: inline-block;
+  margin: 5px 50px 30px 20%;
+}
+
+.pagination a {
+  color: rgb(243, 233, 233);
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  font-size: 10px;
+}
+
+.pagination a.active {
+  background-color: #1f08a5;
+  color: white;
+  border: 1px solid #4CAF50;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a:hover
+{
+  color: #060707;
+  font-size: 14px;
+  border-radius: 10px;
 }
